--- a/web/app/components/left_sidebar/calendar_component.html.erb
+++ b/web/app/components/left_sidebar/calendar_component.html.erb
@@ -1,6 +1,6 @@
 <%= content_tag :div, id: 'calendar', data: { controller: 'left-sidebar--calendar' }, class: '' do %>
 	<div data-calendar-target="calendar" class="calendar select-none tap-highlight-none mt-10 md:py-5">
-		<span class="bg-white font-bold font-display pb-2 pt-10 text-brand-600 text-xl">Minha agenda</span>
+		<span class="c-h2 pb-2 pt-10">Minha agenda</span>
 		<div class="capitalize pt-2 flex font-medium items-center justify-between pb-5 rounded-t-lg text-gray-500">
 			<div class="flex items-center justify-items-start">
 				<span class="font-semibold text-gray-600 mr-2">
