--- a/web/app/javascript/packs/application.scss
+++ b/web/app/javascript/packs/application.scss
@@ -20,6 +20,7 @@
 @import '../stylesheets/mixins';
 @import '../stylesheets/template';
 @import '../stylesheets/utils';
+@import '../stylesheets/components';
 
 @import '../stylesheets/components/me-swipable';
 @import '../stylesheets/components/me-bot';
