--- a/web/app/components/hero/train_event_component.html.erb
+++ b/web/app/components/hero/train_event_component.html.erb
@@ -2,23 +2,15 @@
 	<div class="flex justify-between py-3 mt-2 bg-white rounded-lg select-none tap-highlight-none">
 		<div class="flex flex-col mr-5 space-y-2 h-28 md:w-auto">
 			<%= content_tag :div, data: { action: 'click->hero--train-event#like', 'event-id': @event.id }, class: 'w-12 h-12 h-full bg-brand-100 cursor-pointer duration-100 ease-linear flex font-medium hover:px-3 hover:scale-105 hover:text-green-400 items-center justify-center p-2 rounded-lg select-none tap-highlight-none text-green-500 text-sm transform transition-transform' do %>
-				<!--				<svg class="h-5 text-green-500 fill-current hover:scale-150" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-				<!--					<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>-->
-				<!--					<path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>-->
-				<!--				</svg>-->
+
 				<svg class="w-6 h-6 stroke-current group text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"/>
 				</svg>
-				<!--				<span class="ml-1 text-brand-600">-->
-				<!--						Curtir-->
-				<!--					</span>-->
+
 			<% end %>
-			<%= content_tag :div, data: { action: 'click->hero--train-event#dislike', 'event-id': @event.id }, class: 'w-12 h-12 h-full bg-red-50 cursor-pointer duration-100 ease-linear flex font-medium hover:px-3 hover:scale-105 hover:text-red-400 items-center justify-center p-2 rounded-lg select-none tap-highlight-none text-red-500 text-sm transform transition-transform' do %>
-				<!--				<svg class="h-5 text-red-500 fill-current hover:scale-150" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-				<!--					<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>-->
-				<!--					<path d="M10.88 21.94l5.53-5.54c.37-.37.58-.88.58-1.41V5c0-1.1-.9-2-2-2H6c-.8 0-1.52.48-1.83 1.21L.91 11.82C.06 13.8 1.51 16 3.66 16h5.65l-.95 4.58c-.1.5.05 1.01.41 1.37.59.58 1.53.58 2.11-.01zM21 3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V5c0-1.1-.9-2-2-2z"/>-->
-				<!--				</svg>-->
-				<svg class="w-6 h-6 text-red-500 stroke-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<%= content_tag :div, data: { action: 'click->hero--train-event#dislike', 'event-id': @event.id }, class: 'w-12 h-12 h-full bg-gray-50 cursor-pointer duration-100 ease-linear flex font-medium hover:px-3 hover:scale-105 hover:text-gray-500 items-center justify-center p-2 rounded-lg select-none tap-highlight-none text-gray-600 text-sm transform transition-transform' do %>
+
+				<svg class="w-6 h-6 text-gray-600 stroke-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5"/>
 				</svg>
 			<% end %>
@@ -31,15 +23,15 @@
 												action:     'click->hero--train-event#openEvent',
 												'event-id': @event.id
 											},
-											class: 'font-semibold md:text-lg inline-block leading-snug md:hover:underline text-gray-700' do %>
+											class: 'c-h3 block md:hover:text-brand-600 mb-1' do %>
 				<%= @event.name %>
 			<% end %>
-			<div class="mt-2 text-sm text-gray-500">
+			<div class="mt-2 text-gray-700 text-sm">
 				<%= @event&.categories_display_name %>
 				· <%= helpers.limit_place_name_size(@event.place_details_name, 24) %>
 			</div>
 			<% unless helpers.mobile_device? %>
-				<div class="mt-2 text-sm text-gray-500">
+				<div class="font-light leading-normal mt-2 text-gray-500 text-xs">
 					<%= helpers.limit_description_size @event.description %>
 				</div>
 			<% end %>
