--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -4,31 +4,31 @@
 <div data-controller="loader"
 		 data-loader-on-loading="horizontal-event#open-event:before"
 		 data-loader-on-loaded="horizontal-event#open-event:success"
-		 class="mx-auto px-5 sticky top-20 z-10 z-50">
+		 class="sticky top-20 z-10 z-50 px-5 mx-auto">
 	<div id="open-event"
 			 data-loader-target="loaded">
 		<%= render MainSidebar::LargeEventComponent.new(user: current_user, event: nil) %>
 	</div>
 	<div
-		class="fixed flex font-display h-screen hidden items-center justify-center left-0 overscroll-contain rounded-xl shadow-lg text-3xl text-gray-800 top-0 w-screen"
+		class="flex hidden overscroll-contain fixed top-0 left-0 justify-center items-center w-screen h-screen text-3xl text-gray-800 rounded-xl shadow-lg font-display"
 		data-loader-target="loading"
 		style="background: #abacbfeb">
 		Carregando
-		<svg data-loader-target="onIcon" class="w-5 h-5 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+		<svg data-loader-target="onIcon" class="ml-2 w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 			<path fill="none" d="M0 0h24v24H0V0z"/>
 			<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
 		</svg>
 	</div>
 </div>
 
-<div id="main-content" class="gap-16 max-w-screen-lg md:grid md:grid-cols-8 mx-auto">
+<div id="main-content" class="gap-16 mx-auto max-w-screen-lg md:grid md:grid-cols-8">
 	<section id="main-sidebar" class="col-span-8 md:col-span-5">
 		<div class="mx-auto mb-24 is-animated sm:container">
 			<% if notice %>
-				<div class="bg-brand-100 border border-brand-200 flex font-semibold items-center max-w-screen-lg mb-3 md:mb-0 md:mt-5 mt-1 mx-4 p-3 rounded-lg space-x-2 text-brand-600 text-sm">
-					<div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-brand-100 sm:mx-0 sm:h-10 sm:w-10">
+				<div class="flex items-center p-3 mx-4 mt-1 mb-3 space-x-2 max-w-screen-lg text-sm font-semibold rounded-lg border bg-brand-100 border-brand-200 md:mb-0 md:mt-5 text-brand-600">
+					<div class="flex flex-shrink-0 justify-center items-center mx-auto w-12 h-12 rounded-full bg-brand-100 sm:mx-0 sm:h-10 sm:w-10">
 						<!-- Heroicon name: exclamation -->
-						<svg class="h-6 w-6 text-brand-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+						<svg class="w-6 h-6 text-brand-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"/>
 						</svg>
 					</div>
@@ -38,12 +38,12 @@
 				</div>
 			<% end %>
 			<% unless params[:day] || params[:category] %>
-				<div id="hero__presentation" data-turbo-permanent class="flex flex-row-reverse gap-4 items-start mb-12 md:flex md:flex-row md:mb-5 md:mx-0 md:px-5 mx-5 pt-5 select-none tap-highlight-none" style="min-height: <%= mobile_device? ? '150px' : '225px' %>">
+				<div id="hero__presentation" data-turbo-permanent class="flex flex-row-reverse gap-4 items-start pt-5 mx-5 mb-12 select-none md:flex md:flex-row md:mb-5 md:mx-0 md:px-5 tap-highlight-none" style="min-height: <%= mobile_device? ? '150px' : '225px' %>">
 					<div class="my-auto">
-						<h2 class="font-bold font-display text-brand-600 text-xl">
-							Aproveite Porto Alegre
+						<h2 class="c-h2">
+							Eventos e Cinema em Porto Alegre
 						</h2>
-						<span class="inline-block leading-snug mt-2 text-gray-500 text-sm md:text-base">
+						<span class="inline-block mt-2 c-span">
   						Descubra eventos e siga seus locais e artistas favoritos para não perder nada que acontece na cidade.
   					</span>
 					</div>
@@ -54,45 +54,45 @@
 
 
 			<% if @movies.present? && controller_name == 'feeds' && action_name == 'index' && params[:category].blank? %>
-				<div id="movies" class="mb-12" data-controller="movie-collection slider" data-model="movie">
-					<h2 class="font-bold font-display text-brand-600 text-xl px-5">
-						Filmes nos cinemas de Porto Alegre
+				<div id="movies" class="mb-12" data-controller="movie-collection slider" data-model="movie" data-slider-distance-value="400">
+					<h2 class="px-5 c-h2">
+						Cinemas de Porto Alegre
 					</h2>
-					<div class="relative mt-2 px-5">
-						<div class="hidden md:flex select-none items-center absolute left-0 top-0 bg-x-white-to-transparent h-full w-2 z-20">
-							<div data-action="click->slider#left" class="mt-14 bg-white rounded-full border shadow-md transition-colors duration-200 text-gray-600 hover:text-brand-500 cursor-pointer my-auto -ml-1">
-								<svg class="fill-current h-10 p-2 w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
+					<div class="relative md:px-5 mt-2">
+						<div class="hidden absolute top-0 left-0 z-20 items-center w-2 h-full select-none md:flex bg-x-white-to-transparent">
+							<div data-action="click->slider#left" class="my-auto mt-14 -ml-1 text-gray-600 bg-white rounded-full border shadow-md transition-colors duration-200 cursor-pointer hover:text-brand-500">
+								<svg class="p-2 w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
 									<path d="M0 0h24v24H0V0z" fill="none"/>
 									<path d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"/>
 								</svg>
 							</div>
 						</div>
-						<div class="hidden md:flex select-none items-center absolute right-0 top-0 bg-x-transparent-to-white h-full w-3 z-20">
-							<div data-action="click->slider#right" class="mt-14 bg-white rounded-full border shadow-md transition-colors duration-200 text-gray-600 hover:text-brand-500 cursor-pointer my-auto -ml-7">
-								<svg class="fill-current h-10 p-2 w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
+						<div class="hidden absolute top-0 right-0 z-20 items-center w-3 h-full select-none md:flex bg-x-transparent-to-white">
+							<div data-action="click->slider#right" class="my-auto mt-14 -ml-7 text-gray-600 bg-white rounded-full border shadow-md transition-colors duration-200 cursor-pointer hover:text-brand-500">
+								<svg class="p-2 w-10 h-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black">
 									<path d="M0 0h24v24H0V0z" fill="none"/>
 									<path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"/>
 								</svg>
 							</div>
 						</div>
 						<div data-slider-target="scroller"
-								 class="scrollx py-3">
-							<div class="gap-2 grid grid-flow-col w-content grid-after-margin"
+								 class="py-3 scrollx">
+							<div class="px-5 md:px-0 grid grid-flow-col gap-2 w-content grid-after-margin"
 									 data-movie-collection-turbo-persist-scroll="0"
 									 data-movie-collection-target="scrollContainer">
 								<% @movies.each do |movie| %>
-									<div class="flex flex-col hover:scale-105 transform transition-transform w-24">
+									<div class="flex flex-col w-24 transition-transform transform group md:hover:scale-105">
 										<%= link_to cine_film_path(movie), class: 'flex flex-col', data: { 'turbo-preserve-scroll': true } do %>
 											<%= image_tag shrine_image_url(movie, :small), {
 												loading: :lazy,
 												title:   movie.title,
 												alt:     "Filme #{movie.title}",
-												class:   'shadow-sm bg-brand-100  object-center object-cover rounded',
+												class:   'border shadow-sm group-hover:shadow bg-brand-100  object-center object-cover rounded',
 												style:   'min-height: 130px',
 												onerror: "this.style.opacity='0'"
 											} rescue nil %>
 											<%= tag.div limit_name_size(movie.title, 24), class: 'leading-tight mt-2 inline-block text-xs text-center font-semibold text-gray-800' %>
-											<div class="text-xxs leading-tight text-center mt-1"><%= movie.genres&.join(", ") %></div>
+											<div class="mt-1 leading-tight text-center text-xxs"><%= movie.genres&.join(", ") %></div>
 										<% end %>
 									</div>
 								<% end %>
@@ -107,14 +107,14 @@
 		<% if @upcoming_events.present? %>
 			<div class="<%= class_names('bg-white pb-2') %>">
 				<% if params[:category] %>
-					<div class="flex items-center justify-between md:pr-10 pr-5">
-						<h2 class="font-bold font-display md:text-3xl pl-5 pt-3 text-gray-900 text-xl">
-							<span class="text-brand-600 underline"><%= @category&.details_display_name&.titleize %></span> em Porto
+					<div class="flex justify-between items-center pr-5 md:pr-10">
+						<h2 class="px-5 c-h2">
+							<span class="underline text-brand-600"><%= @category&.details_display_name&.titleize %></span> em Porto
 							Alegre
 						</h2>
 					</div>
 				<% else %>
-					<h2 class="bg-white font-bold font-display px-5 text-brand-600 text-xl">
+					<h2 class="px-5 c-h2">
 						Eventos em Porto Alegre <%= I18n.l params[:day].to_date if params[:day] %>
 					</h2>
 				<% end %>
@@ -127,7 +127,7 @@
 																										}) %>
 			</div>
 		<% else %>
-			<h2 class="bg-white font-bold font-display px-5 text-gray-900 text-xl">
+			<h2 class="px-5 text-xl font-bold text-gray-900 bg-white font-display">
 				Não foram encontrados eventos em Porto
 				Alegre <%= I18n.l params[:day].to_date if params[:day] %> <%= "na categoria #{@category&.details_display_name&.titleize}" if params[:category] %>
 			</h2>
@@ -143,8 +143,8 @@
 	<% end %>
 
 
-	<div data-controller="install" data-install-native="true" data-install-target="button" class="items-center flex select-none tap-highlight-none bottom-20 fixed transform transition-transform translate-y-32 w-full z-30">
-		<span data-action="click->install#install" class="bg-brand-500 bg-white font-bold mx-auto px-5 py-3 rounded-full shadow-lg text-white w-content">
+	<div data-controller="install" data-install-native="true" data-install-target="button" class="flex fixed bottom-20 z-30 items-center w-full transition-transform transform translate-y-32 select-none tap-highlight-none">
+		<span data-action="click->install#install" class="py-3 px-5 mx-auto font-bold text-white bg-white rounded-full shadow-lg bg-brand-500 w-content">
 			Instalar aplicativo
 		</span>
 	</div>
