--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -14,11 +14,11 @@
 
 %>
 
-<header class="<%= class_names('h-14 px-5 md:h-16 max-w-screen-lg md:grid md:grid-cols-12 mx-auto my-auto select-none tap-highlight-none',
-															 { 'h-14':      !current_page?('/busca'),
+<header class="<%= class_names('h-14 px-5 md:h-16 max-w-screen-lg md:grid md:grid-cols-8 mx-auto my-auto select-none tap-highlight-none',
+															 { 'h-14':           !current_page?('/busca'),
 																 'h-content py-1': current_page?('/busca') }) %>"
 				id="top-bar">
-	<div class="<%= class_names 'flex md:relative md:col-span-3 h-full',
+	<div class="<%= class_names 'flex md:relative md:col-span-2 h-full',
 															'space-x-4': content_for?(:top_app_bar_title) %>">
 		<% if mobile_device? %>
 			<div class="my-auto text-gray-600 md:hidden">
@@ -74,10 +74,10 @@
 		<% end %>
 	</div>
 	<% if props[:visible][:search] %>
-		<div class="<%= class_names('col-span-12 md:col-span-5 md:px-3',
+		<div class="<%= class_names('col-span-12 md:col-span-3 md:px-3',
 																{ 'hidden md:block': controller_name != 'search' }) %>">
 			<form
-				class="flex items-center h-full px-2 md:px-0 bg-white rounded"
+				class="flex items-center h-full px-2 md:px-0 rounded"
 				data-controller="search"
 				data-search-target="search"
 				data-reflex-permanent
@@ -92,7 +92,7 @@
 				<!--				</svg>-->
 				<input autocomplete="false"
 							 name="q"
-							 class="bg-brand-100 focus:bg-white focus:border-transparent focus:outline-none focus:ring focus:ring-brand-500 font-light h-10 mx-auto placeholder-brand-400 focus:placeholder-brand-600 px-4 py-1 rounded-full text-sm w-full"
+							 class="bg-brand-100 focus:bg-white focus:border-transparent focus:outline-none focus:ring focus:ring-brand-500 font-light h-10 mx-auto placeholder-brand-400 focus:placeholder-brand-600 px-4 py-1 rounded-full text-xs w-full"
 							 id="text-field-shape-one"
 							 placeholder="Busque por rock, feira de rua, samba, standup..."
 							 type="text"
@@ -104,7 +104,7 @@
 			</form>
 		</div>
 	<% end %>
-	<div class="hidden md:inline-block md:col-span-4">
+	<div class="hidden md:inline-block md:col-span-3">
 		<div class="flex items-center justify-end h-full">
 			<% unless current_page?('/users/sign_up') || current_page?('/users/sign_in') %>
 				<% if current_user %>
@@ -126,7 +126,7 @@
 												'gtm-action':   'click',
 												'gtm-category': 'Funil',
 												'gtm-label':    'Criar meu perfil'
-											}, class: 'bg-brand-500 border border-transparent focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 font-medium hover:bg-brand-600 inline-flex items-center px-4 py-2 rounded-md shadow-sm text-sm text-white' %>
+											}, class: 'bg-brand-600 border border-transparent focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 font-medium hover:bg-brand-500 inline-flex items-center px-4 py-2 rounded-md shadow-sm text-sm text-white' %>
 				<% end %>
 			<% end %>
 		</div>
