--- a/web/app/views/events/_large_event.html.erb
+++ b/web/app/views/events/_large_event.html.erb
@@ -74,7 +74,7 @@
 		</div>
 		<div class="my-auto text-sm leading-snug text-gray-800">
 			O evento acontecerá
-			<span class="font-semibold">daqui <%= distance_of_time_in_words event.day_of_week['date'], DateTime.now %></span>
+			<span class="font-semibold">daqui <%= distance_of_time_in_words event&.start_time, DateTime.now %></span>
 			em uma <span class="font-semibold"><%= I18n.l(event.day_of_week['date'], format: :week) %></span>. <%= link_to('Ver minha agenda neste dia', my_agenda_path(start_date: event.day_of_week['date']), class: 'text-brand-500 font-semibold') %>
 		</div>
 	</div>
