--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -116,53 +116,50 @@
 	</div>
 <% end %>
 
-<section id="page" class="max-w-screen-lg grid-cols-12 pb-10 md:grid md:gap-10 md:mt-10 md:mx-auto">
-	<div class="md:col-span-8">
+<section id="page" class="max-w-screen-lg grid-cols-8 pb-10 md:grid md:gap-10 md:mt-10 md:mx-auto">
+	<div class="md:col-span-5">
 		<%= render(LargeEventComponent.new(event: @event, user: current_user)) %>
 	</div>
-	<div class="md:col-span-4 md:mb-0 mt-5 md:mt-0 space-y-8">
-		<!--		<a class="inline-block mx-auto w-content" href='https://play.google.com/store/apps/details?id=com.alegreme.app&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>-->
-		<!--			<img src="https://alegreme.sfo2.digitaloceanspaces.com/stable-images/banner-android-download-250x250.png" alt="Baixe o aplicativo">-->
-		<!--		</a>-->
+	<div class="pt-24 md:col-span-3 md:mb-0 mt-5 md:mt-0 space-y-8">
 		<% if will_happen? @event %>
-			<div class="bg-gray-200 cursor-pointer flex font-bold hidden items-center md:block bottom-auto relative rounded-xl w-auto p-3 space-y-2 text-gray-600 text-sm">
-				<a href="<%= @event.source_url %>" target="_blank" rel="nofollow" class="select-none transition-colors bg-white flex flex-1 group hover:bg-brand-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
-					<div>Abrir página oficial</div>
-					<svg class="group-hover:text-white transition-colors h-4 text-gray-400 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<div class="cursor-pointer flex hidden items-center md:block bottom-auto relative rounded-xl w-auto p-3 space-y-2 text-gray-600 text-sm">
+				<a href="<%= @event.source_url %>" target="_blank" rel="nofollow" class="group items-center cursor-pointer duration-50 flex group-hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-3 mr-3 px-4 py-2 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content bg-gray-100 text-gray-600">
+					<svg class="group-hover:text-brand-700 transition-colors h-5 text-gray-400 stroke-current mr-3" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
 					</svg>
+					<div>Abrir página oficial</div>
 				</a>
 				<% if @event&.ticket_url %>
-					<a href="<%= @event.ticket_url %>" target="_blank" rel="nofollow" class="select-none transition-colors bg-white flex flex-1 group hover:bg-brand-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
-						<div>Comprar ingressos</div>
-						<svg class="fill-current group-hover:text-white h-6 text-gray-400 transition-colors" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<a href="<%= @event.ticket_url %>" target="_blank" rel="nofollow" class="group items-center cursor-pointer duration-50 flex group-hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-3 mr-3 px-4 py-2 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content bg-gray-100 text-gray-600">
+						<svg class="fill-current group-hover:text-brand-700 h-5 text-gray-400 transition-colors mr-3" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M0 0h24v24H0V0z" fill="none"/>
 							<path d="M22 10V6c0-1.1-.9-2-2-2H4c-1.1 0-1.99.9-1.99 2v4c1.1 0 1.99.9 1.99 2s-.89 2-2 2v4c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2v-4c-1.1 0-2-.9-2-2s.9-2 2-2zm-2-1.46c-1.19.69-2 1.99-2 3.46s.81 2.77 2 3.46V18H4v-2.54c1.19-.69 2-1.99 2-3.46 0-1.48-.8-2.77-1.99-3.46L4 6h16v2.54zM9.07 16L12 14.12 14.93 16l-.89-3.36 2.69-2.2-3.47-.21L12 7l-1.27 3.22-3.47.21 2.69 2.2z"/>
 						</svg>
+						<div>Comprar ingressos</div>
 					</a>
 				<% end %>
-				<div class="select-none transition-colors overflow-hidden relative bg-white flex flex-1 group hover:bg-brand-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer"
+				<div class="group items-center cursor-pointer duration-50 flex group-hover:bg-brand-200 hover:border-brand-200 hover:text-brand-600 inline-block justify-start mb-3 mr-3 px-4 py-2 rounded-full select-none tap-highlight-none transform transition-colors transition-all w-content bg-gray-100 text-gray-600"
 						 data-controller="share-button"
 						 data-share-button-text="<%= strip_tags(limit_description_size(@event.description, 160)) %>"
 						 data-share-button-title="<%= @event.name %>"
 						 data-share-button-url="<%= event_url(@event, format: :html) %>"
 						 data-action="click->share-button#share">
 					<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
-					<div>Compartilhar</div>
-					<svg class="group-hover:text-white transition-colors h-4 text-gray-400 fill-current" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg class="group-hover:text-brand-700 transition-colors h-4 text-gray-400 fill-current mr-3" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M15 14.08C14.24 14.08 13.56 14.38 13.04 14.85L5.91 10.7C5.96 10.47 6 10.24 6 10C6 9.76 5.96 9.53 5.91 9.3L12.96 5.19C13.5 5.69 14.21 6 15 6C16.66 6 18 4.66 18 3C18 1.34 16.66 0 15 0C13.34 0 12 1.34 12 3C12 3.24 12.04 3.47 12.09 3.7L5.04 7.81C4.5 7.31 3.79 7 3 7C1.34 7 0 8.34 0 10C0 11.66 1.34 13 3 13C3.79 13 4.5 12.69 5.04 12.19L12.16 16.35C12.11 16.56 12.08 16.78 12.08 17C12.08 18.61 13.39 19.92 15 19.92C16.61 19.92 17.92 18.61 17.92 17C17.92 15.39 16.61 14.08 15 14.08Z"/>
 					</svg>
+					<div>Compartilhar</div>
 				</div>
 			</div>
 		<% end %>
 
-		<div class="overflow-hidden bg-white rounded-lg py-4 md:rounded-xl md:shadow-2xl md:border md:border-gray-100 p-5 space-y-3">
-			<h2 class="font-bold font-display text-xl text-gray-800 uppercase">Organizadores</h2>
+		<div class="p-5 py-4 space-y-3">
+			<h2 class="c-h3">Organizadores</h2>
 			<% @event.organizers.each do |organizer| %>
-				<%= link_to organizer_path(organizer), class: 'flex font-semibold items-center space-x-3' do %>
+				<%= link_to organizer_path(organizer), class: 'flex items-center space-x-3' do %>
 					<%= image_tag organizer.image[:sm].try { |image| image.url(public: true) },
 												loading: :lazy,
-												class:   'w-8 h-8 rounded-full shadow-sm',
+												class:   'border w-8 h-8 rounded-full shadow-sm',
 												onerror: "this.style.opacity='0'" rescue nil %>
 					<div>
 						<%= organizer.details_name %>
@@ -171,13 +168,28 @@
 			<% end %>
 		</div>
 
-		<div class="overflow-hidden bg-white rounded-lg py-4 md:rounded-xl md:shadow-2xl md:border md:border-gray-100">
-			<h2 class="px-5 font-bold font-display text-xl text-gray-800 uppercase">Similares</h2>
+		<div class="py-4 space-y-3">
+			<h2 class="c-h3 px-5">Similares</h2>
 			<div class="md:space-y-2">
 				<% if @similar_events.present? %>
 					<% @similar_events.each do |similar_event| %>
-						<div class="flex justify-between px-5 py-3 md:border-0">
-							<div class="pr-6">
+						<div class="flex justify-start px-5 py-3 md:border-0">
+							<div>
+								<div data-controller="ripple" class="relative w-16 h-16 rounded overflow-hidden ripple ripple-white">
+									<%= link_to event_path(similar_event),
+															data: {
+																action:     'click->main-sidebar--horizontal-event#openEvent',
+																'event-id': similar_event.id
+															} do %>
+										<%= image_tag shrine_image_url(similar_event, :feed), {
+											loading: :lazy,
+											class:   'cursor-pointer h-full object-center object-cover w-full overflow-hidden',
+											onerror: "this.style.opacity='0'"
+										} rescue nil %>
+									<% end %>
+								</div>
+							</div>
+							<div class="pl-6">
 								<%= content_tag :a,
 																href:  event_path(similar_event),
 																data:  {
@@ -185,25 +197,9 @@
 																	url:        event_path(similar_event),
 																	'event-id': similar_event.id
 																},
-																class: 'md:hover:underline inline-block md:text-sm font-semibold mb-1 leading-snug text-gray-600' do %>
+																class: 'md:hover:underline inline-block md:text-sm mb-1 leading-snug text-gray-700' do %>
 									<%= similar_event.name %>
 								<% end %>
-							</div>
-							<div>
-								<div data-controller="ripple" class="relative w-24 overflow-hidden rounded shadow-xs ripple ripple-white">
-									<%= link_to event_path(similar_event),
-															data: {
-																action:     'click->main-sidebar--horizontal-event#openEvent',
-																'event-id': similar_event.id
-															} do %>
-										<div class="bg-gray-50 aspect-ratio-16/9"></div>
-										<%= image_tag shrine_image_url(similar_event, :feed), {
-											loading: :lazy,
-											class:   'absolute cursor-pointer h-full left-0 object-center object-cover top-0 w-full overflow-hidden',
-											onerror: "this.style.opacity='0'"
-										} rescue nil %>
-									<% end %>
-								</div>
 							</div>
 						</div>
 					<% end %>
