--- a/web/app/components/left_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/left_sidebar/horizontal_event_component.html.erb
@@ -14,7 +14,7 @@
 				· <%= l(@event.start_time.to_date, format: :week).titlecase %>
 				· <%= "daqui #{distance_of_time_in_words(@event.start_time, DateTime.now)}" %>
 			</div>
-			<div class="mb-1 leading-snug text-gray-700 font-semibold">
+			<div class="mb-1 leading-snug text-gray-700">
 				<%= content_tag :a,
 												href:  event_path(@event),
 												data:  {
