--- a/web/app/views/users/registrations/new.html.erb
+++ b/web/app/views/users/registrations/new.html.erb
@@ -84,7 +84,7 @@
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
 				</svg>
-				️Salvar seu eventos favoritos na sua agenda;
+				️Salvar eventos favoritos na sua agenda;
 			</p>
 			<p class="flex">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
